# yrpc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  clear.sh  log.txt  todo_list.md  v0.1.0.md  yrpc.code-workspace  开发日志.md  记录.md
.github/workflows/: ci.yaml  merge_pr.yaml  push_new_code.yaml  push_new_code.ymal
bbt/rpc/: RpcClient.cc  RpcClient.hpp  RpcServer.cc  RpcServer.hpp
bbt/rpc/detail/: BufferMgr.cc  BufferMgr.hpp  Define.hpp  Protocol.cc  Protocol.hpp  RemoteCaller.cc  RemoteCaller.hpp  RpcCodec.hpp  __TRpcCodec.hpp
benchmark/: CMakeLists.txt
benchmark/fatiguetest/: echo_client.cc  echo_server.cc  run.sh
doc/: v1.0-readme.md  v1.2.md  前言.md
example/: CMakeLists.txt  all_example.pb.cc  all_example.pb.h  all_example.proto  client.cc  codec.cc  proto.hpp  server.cc
example/cluster_test/: CMakeLists.txt  NodeServer.cc  NodeServer.h  ServiceCenter.cc  ServiceCenter.h  Share.h
example/p2p_test/: CMakeLists.txt  PointServer.cc  PointServer.h
example/util_test/: CMakeLists.txt  YTimertest.cc  test_ID.cc  test_YAssert.cc  test_buffer.cc  test_logger.cc  test_thread_safe.cc  test_timeutil.cc  test_type.cc
include/: Acceptor.h  CallBack.h  Channel.h  Epoller.h  Logger.h  Reactor.h  UdpAddress.h  UdpConnection.h  UdpSession.h  lock.h  lock_guard.h  noncopyable.h
message/: AddAndStr.proto  s2c.proto
message/test_protocol/: AddAndStr.proto  addr.proto
message/yrpc_core_protocol/: c2s.proto
rpc/: CMakeLists.txt
rpc/Util/: Assert.h  BKDRHash.h  Buffers.cc  Buffers.h  CMakeLists.txt  Clock.h  Daemon.cc  IDGenerate.h  Locker.h  Statistics.h  TcpUtil.h  Thread.cc  Thread.h  ThreadPool.h  TimeQueue.h  TimeQueue_Definition.h  Type.h  TypeList.h  YRoutinePool.h  all.h  comparator.h  cter_tsf.h  logger.cc  logger.h  noncopyable.h
rpc/Util/UtilTest/: CMakeLists.txt  YTimertest.cc  test_ID.cc  test_buffer.cc  test_logger.cc  test_type.cc
rpc/YRoutine/: CMakeLists.txt  Cfg.h  Def.h  Epoller.cc  Epoller.h  Hook.cc  Hook.h  Poller.h  RoutineStack.cc  RoutineStack.h  Scheduler.cc  Scheduler.h  YContextjump.S  YRoutineContext.cc  YRoutineContext.h  YRoutineContext_Base.cc  YRoutineContext_Base.h  YRoutineRuntime.cc  YRoutineRuntime.h  coroutine.h  test_YRoutine.cc
rpc/YRoutine/RoutineTest/: CMakeLists.txt  test_Cond_t.cc  test_Epoller_client.cc  test_Epoller_server.cc  test_Sleep.cc  test_Suspend.cc  test_YCO_Scheduler.cc  test_YRoutine1.cc  test_YRoutine2.cc
rpc/config/: Cfg.h  Def.h  config.hpp
rpc/msg/: CMakeLists.txt  ProtocolFactory.h  all.h  service.h  service_base.h  servicemap.cc  servicemap.h
rpc/msg/test/: CMakeLists.txt  Service_test.cc  addr.pb.cc  addr.pb.h
rpc/network/: Acceptor.cc  Acceptor.h  CMakeLists.txt  Callback.h  Cfg.h  Connection.cc  Connection.h  Connector.cc  Connector.h  Def.h  Defines.h  IPAddress.cc  IPAddress.h  SessionBuffer.cc  SessionBuffer.h  TcpServer.h  all.h  connection.cc  connection.h
rpc/network/Unit_Test/: CMakeLists.txt  test_SessionBuffer.cc
rpc/proto/: AddAndStr.pb.cc  AddAndStr.pb.h  c2s.pb.h  s2c.pb.cc  s2c.pb.h
rpc/proto/test_protocol/: AddAndStr.pb.cc  AddAndStr.pb.h  addr.pb.cc  addr.pb.h
rpc/proto/yrpc_core_protocol/: c2s.pb.cc  c2s.pb.h  (+2 more)
rpc/protocol/: CMakeLists.txt  Cfg.h  Codec.h  Def.h  Define.h  ErrCode.cc  ErrCode.h  Protocol.h  ProtocolUtil.h  RpcRequest.h  RpcResponse.h  YProtocolGenerater.cc  YProtocolGenerater.h  YProtocolResolver.cc  YProtocolResolver.h  all.h  proto.cc  proto.h
rpc/shared/: Cfg.h  Def.h  ErrCode.h  err_define.h
rpc/util/: Cfg.h  Def.h
rpc/yrpc/: CMakeLists.txt  CallObj.cc  CallObj.h  CallObjFactory.h  CallResult.h  Cfg.h  Channel.cc  Channel.h  ConnQueue.cc  ConnQueue.hpp  Def.h  Define.h  RpcBaseSession.h  RpcClient.cc  RpcClient.h  RpcClientSession.cc  RpcClientSession.h  RpcFuture.h  RpcServer.cc  RpcServer.h  RpcServerSession.h  RpcSession.cc  RpcSession.h  RpcSession_Definition.h  ServerSingle.cc  ServerSingle.h  Service.cc  Service.h  ServiceModule.cc  ServiceModule.h  SessionManager.cc  SessionManager.h  YRpc.cc  YRpc.h
rpc/yrpc/rpctest/: CMakeLists.txt  Client.cc  Server.cc  ServiceCenter.h  Share.h
rpc/yrpc/test/: CMakeLists.txt  Service_login.cc  testproto.pb.cc  testproto.pb.h  testproto.proto
shell/: auto_push.sh  bbt_copy_header_dir.sh  build.sh  clear.sh  generate.sh  install.sh  re.sh  start.sh  test.sh  testbenth.sh  uninstall.sh
src/: Channel.cpp  Epoller.cpp  Logger.cpp  UdpAddress.cpp  lock.cpp
unit_test/: CMakeLists.txt  test1.cc  test2.cc
yrpc/: RpcClient.cc  RpcClient.hpp  RpcServer.cc  RpcServer.hpp
yrpc/Util/: Buffers.cc  Buffers.h  Clock.h  Daemon.cc  Daemon.h  EnableSharedOfThis.h  IDGenerate.h  Locker.h  Statistics.h  ThreadPool.h  TimeQueue.h  TimeQueue_Definition.h  Type.h  all.h  comparator.h  logger.cc  logger.h  noncopyable.h
yrpc/YRoutine/: CMakeLists.txt  Epoller.cc  Epoller.h  Hook.cc  Hook.h  RoutineStack.cc  RoutineStack.h  Scheduler.cc  Scheduler.h  YContext.h  YContextmake.S  YRoutineContext.cc  YRoutineContext.h  YRoutineContext_Base.cc  YRoutineContext_Base.h  ycontext.h
yrpc/config/: config.hpp
yrpc/core/: CallObj.cc  CallObj.h  CallObjFactory.cc  CallObjFactory.h  Channel.cc  Channel.h  ChannelMgr.cc  ChannelMgr.h  ConnQueue.cc  ConnQueue.hpp  Define.h  ProtocolFactory.h  RpcClient.cc  RpcClient.h  RpcServer.cc  RpcServer.h  RpcSession.cc  RpcSession.h  ServiceModule.cc  ServiceModule.h  SessionManager.cc  SessionManager.h  YRpc.cc  YRpc.h
yrpc/core/rpctest/: CMakeLists.txt  Client.cc  Enum.h  Server.cc
yrpc/detail/: BufferMgr.cc  BufferMgr.hpp  Define.hpp  Protocol.cc  Protocol.hpp  RemoteCaller.cc  RemoteCaller.hpp  RpcCodec.hpp
yrpc/msg/: ProtocolFactory.h  all.h  service_base.h  servicemap.cc  servicemap.h
yrpc/network/: Acceptor.cc  Acceptor.h  Connection.cc  Connection.h  Connector.cc  Connector.h  Defines.h  IPAddress.cc  IPAddress.h  SessionBuffer.cc  SessionBuffer.h  TcpServer.h  all.h
yrpc/protocol/: Codec.h  Define.h  YProtocolGenerater.cc  YProtocolGenerater.h  YProtocolResolver.cc  YProtocolResolver.h  all.h  proto.cc  proto.h
yrpc/shared/: ErrCode.h  all.h  err_define.h
(+15 files in other folders)
